package org.himanshu.model.vehicle;

public class Bike extends HireableVehicle{

}
