package org.himanshu.model.vehicle;

public class Car extends HireableVehicle{
}
