package org.himanshu.model.vehicle;

public class Van extends HireableVehicle{
}
