package org.himanshu.model.vehicle;

public enum VehicleCategory {
    PASSENGER,
    COMMERCIAL,
}
