package org.himanshu.model.vehicle;

import org.himanshu.model.common.Address;
import org.himanshu.model.common.Coordinates;

public class VehicleLocation {
    private String locationId;
    private Address address;
    private Coordinates coordinates;
}
