package org.himanshu.model.vehicle;

public enum VehicleStatus {
    AVAILABLE,
    BOOKED,
    INUSE,
    SERVICED,
    LOST,
    MISC,
}
