package org.himanshu.model.vehicle;

public enum VehicleType {
    HATCHBACK,
    SUV,
    SEDAN,
    THREEWHEELER,
    TRUCK,
    VAN,
    MOTORCYCLE,
    BICYCLE,
}
